@@ -9,6 +9,10 @@ NEWS - list of user-visible changes between releases of GNU Libtool
     --with-pic and --without-pic are still supported, though, for
     backward compatibility.
 
+  - The configure option --with-aix-soname has been renamed to
+    --enable-aix-soname.  The old name --with-aix-soname is still
+    supported, though, for backward compatibility.
+
 
 * Noteworthy changes in release 2.5.2 (2024-08-29) [beta]
 
